--- a/expenses_tracker/dart files/pubspec.yaml
+++ b/expenses_tracker/dart files/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.1
+  date_picker_timeline: ^1.2.0
+  shared_preferences: ^0.5.7+3
 
 
   # The following adds the Cupertino Icons font to your application.
