--- a/expenses_tracker/dart files/pubspec.yaml
+++ b/expenses_tracker/dart files/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.1
   date_picker_timeline: ^1.2.0
   shared_preferences: ^0.5.7+3
+  charts_flutter: ^0.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
