--- a/expenses_tracker/dart files/pubspec.yaml
+++ b/expenses_tracker/dart files/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   date_picker_timeline: ^1.2.0
   shared_preferences: ^0.5.7+3
   charts_flutter: ^0.9.0
+  date_format: ^1.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
