--- a/expenses_tracker/dart files/pubspec.yaml
+++ b/expenses_tracker/dart files/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   charts_flutter: ^0.9.0
   date_format: ^1.0.8
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
